--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
+          <li>We can use conditional statements and loops to control the order in which code is executed</li>
+          <li>In JavaScript and many other programming languages, arrays are zero-indexed and sequential</li>
+
         </ul>
   
    
@@ -63,5 +68,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
